2003-06-18  William Jon McCann  <mccann@jhu.edu>

	* src/prefs.c (prefs_dialog_create): 
	* src/dialog.c (dialog_score_create): Tweaked spacing.

	* src/gnect.c (gnect_cleanup): Only call gtk_main_quit if we are in
	a main loop.

	* src/heurist.c: 
	* src/playgame.c: 
	* src/evaluate.c: 
	* src/ia_main.c: 
	* src/bintree.c: 
	* src/connect4.c: 
	* src/connect4.h: 
	* src/adjmtrx.c: 
	* src/prefs.c: 
	* src/gfx.c: 
	* src/gui.c: 

	* src/dialog.c: Fixed compiler warnings.

2003-06-16  William Jon McCann  <mccann@jhu.edu>

	* src/gnect.c (gnect_get_random_num): Use glib random functions.

	* src/prefs.c: Fix to remove compiler warnings.

2003-06-16  Tim Musson  <trmusson@ihug.co.nz>
 
        * src/prefs.h:
	* src/prefs.c: Added "grab" buttons to keyboard control options
        (fixes gnect part of #97327)
 

2003-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/gui.c (gui_set_status_prompt_new_game): Reworded the message
	to get rid of the awkward "->" thing.

	* data/gnect.schemas.in: Change the default keys to be the arrow
	keys.

2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/prefs.c: 
	* src/prefs.h: 
	* data/gnect.schemas.in:
	* src/gui.c: Removed the "are you sure" questions.

	* src/prefs.c: Removed dead code from the preferences response
	callback (actually deleted the entire function and made the
	callback gtk_widget_hide).

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* src/prefs.c (cb_prefs_gconf_verify_changed): HIG fixes for
	preferences dialog.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.c: 
	* src/gui.c: 
	* src/prefs.c: Removed separator from dialogs as in HIG.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/gui.c: UI consistency (see bug #114447).

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* data/Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/prefs.c (prefs_dialog): 